# zema-ai

./: .cursorrules  .env.example  .gitignore  CHECKPOINT.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
config/: logging.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: ACTIVATION.md  ARCHITECTURE.md  BOSGAME_P3_LITE.md  CHAT_TRANSITION_GUIDE.md  DOCUMENTATION_STRUCTURE.md  GITHUB_SETUP.md  IMPROVEMENTS.md  PROJECT_PROGRESS.md  PROMPT_ANALYSIS_REPORT.md  README.md  STRUCTURE.md  WHY_ACTIVATION.md  WSL_INFO.md  setup.md
docs/architecture/: ARCHITECTURE.md  CODE_DOCUMENTATION.md  SMART_HYBRID_MODE.md
docs/comparisons/: ADA_COMPARISON.md
docs/development/: ENHANCEMENT_PROGRESS.md
docs/features/: SETTINGS_DASHBOARD_GUIDE.md  VOICE_MODE.md
docs/git/: AUTO_COMMIT.md  V0.1.0_TAG.md  VERSIONING.md
docs/guides/: DASHBOARD_QUICK_START.md  DASHBOARD_TESTING.md  HUGGINGFACE_MODEL_RECOMMENDATIONS.md  NAVIGATION_TEST.md  ZEMA-BOSGAME-P3-LITE-CONFIG.md  ZEMA-CURSOR-PROMPTS.md  ZEMA-GESTURE-INTEGRATION.md  (+9 more)
scripts/: add_pip_to_path.bat  auto_commit.py  benchmark.py  cleanup_guides_folder.py  connect_github.py  download_models.py  move_zema_to_guides.py  organize_docs.py  organize_project.py  organize_zema_files.py  test_dashboard.py  test_navigation.py  test_setup.py  update_docs.py  verify_audio.py  verify_hardware.py  verify_ollama.py  verify_setup.py  verify_step4.py
src/: __init__.py  main.py  version.py
tests/: __init__.py  conftest.py  test_config.py
(+126 files in other folders)
